// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateDrizzleSchema > generates schema for multiple models 1`] = `
"// AUTO-GENERATED by \`nanoka generate\`. DO NOT EDIT BY HAND.
// To regenerate: \`npx nanoka generate\`
import { sqliteTable, text } from 'drizzle-orm/sqlite-core'

export const users = sqliteTable('users', {
  id: text('id').primaryKey().notNull(),
  name: text('name').notNull(),
})

export const posts = sqliteTable('posts', {
  id: text('id').primaryKey().notNull(),
  title: text('title').notNull(),
  content: text('content').notNull(),
})
"
`;

exports[`generateDrizzleSchema > generates schema for single model with all field types 1`] = `
"// AUTO-GENERATED by \`nanoka generate\`. DO NOT EDIT BY HAND.
// To regenerate: \`npx nanoka generate\`
import { integer, real, sqliteTable, text } from 'drizzle-orm/sqlite-core'

export const users = sqliteTable('users', {
  id: text('id').primaryKey().notNull(),
  name: text('name').notNull(),
  email: text('email').notNull().unique(),
  age: integer('age').notNull(),
  score: real('score').notNull(),
  active: integer('active', { mode: 'boolean' }).notNull(),
  createdAt: integer('createdAt', { mode: 'timestamp_ms' }).notNull(),
  metadata: text('metadata', { mode: 'json' }).$type<unknown>().notNull(),
})
"
`;

exports[`generateDrizzleSchema > handles combined modifiers 1`] = `
"// AUTO-GENERATED by \`nanoka generate\`. DO NOT EDIT BY HAND.
// To regenerate: \`npx nanoka generate\`
import { sqliteTable, text } from 'drizzle-orm/sqlite-core'

export const users = sqliteTable('users', {
  id: text('id').primaryKey().notNull(),
  email: text('email').notNull().unique(),
  phone: text('phone').unique(),
  status: text('status').notNull().default("active"),
})
"
`;

exports[`generateDrizzleSchema > handles default values (literal) 1`] = `
"// AUTO-GENERATED by \`nanoka generate\`. DO NOT EDIT BY HAND.
// To regenerate: \`npx nanoka generate\`
import { integer, sqliteTable, text } from 'drizzle-orm/sqlite-core'

export const posts = sqliteTable('posts', {
  id: text('id').primaryKey().notNull(),
  title: text('title').notNull(),
  status: text('status').notNull().default("draft"),
  count: integer('count').notNull().default(0),
  active: integer('active', { mode: 'boolean' }).notNull().default(true),
})
"
`;

exports[`generateDrizzleSchema > handles empty models array 1`] = `
"// AUTO-GENERATED by \`nanoka generate\`. DO NOT EDIT BY HAND.
// To regenerate: \`npx nanoka generate\`
import { sqliteTable } from 'drizzle-orm/sqlite-core'
"
`;

exports[`generateDrizzleSchema > handles function defaults with warning 1`] = `
"// AUTO-GENERATED by \`nanoka generate\`. DO NOT EDIT BY HAND.
// To regenerate: \`npx nanoka generate\`
import { integer, sqliteTable, text } from 'drizzle-orm/sqlite-core'

export const posts = sqliteTable('posts', {
  id: text('id').primaryKey().notNull(),
  title: text('title').notNull(),
  createdAt: integer('createdAt', { mode: 'timestamp_ms' }).notNull(),
})
"
`;

exports[`generateDrizzleSchema > handles integer with min/max constraints 1`] = `
"// AUTO-GENERATED by \`nanoka generate\`. DO NOT EDIT BY HAND.
// To regenerate: \`npx nanoka generate\`
import { integer, sqliteTable, text } from 'drizzle-orm/sqlite-core'

export const stats = sqliteTable('stats', {
  id: text('id').primaryKey().notNull(),
  score: integer('score').notNull(),
})
"
`;

exports[`generateDrizzleSchema > handles optional fields 1`] = `
"// AUTO-GENERATED by \`nanoka generate\`. DO NOT EDIT BY HAND.
// To regenerate: \`npx nanoka generate\`
import { sqliteTable, text } from 'drizzle-orm/sqlite-core'

export const users = sqliteTable('users', {
  id: text('id').primaryKey().notNull(),
  name: text('name').notNull(),
  nickname: text('nickname'),
})
"
`;

exports[`generateDrizzleSchema > handles string with min/max constraints 1`] = `
"// AUTO-GENERATED by \`nanoka generate\`. DO NOT EDIT BY HAND.
// To regenerate: \`npx nanoka generate\`
import { sqliteTable, text } from 'drizzle-orm/sqlite-core'

export const users = sqliteTable('users', {
  id: text('id').primaryKey().notNull(),
  username: text('username').notNull(),
})
"
`;

exports[`generateDrizzleSchema > preserves field order in model 1`] = `
"// AUTO-GENERATED by \`nanoka generate\`. DO NOT EDIT BY HAND.
// To regenerate: \`npx nanoka generate\`
import { sqliteTable, text } from 'drizzle-orm/sqlite-core'

export const ordered = sqliteTable('ordered', {
  z: text('z').notNull(),
  a: text('a').notNull(),
  m: text('m').notNull(),
})
"
`;
